--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,16 +1,13 @@
 # Base image
-FROM ubuntu:latest
+FROM vhalme/solarwind-nodejs-server
 
 # Set working directory
 WORKDIR /app
 
-# Install Node.js and npm
-RUN apt-get update && apt-get install -y curl && \
-    curl -sL https://deb.nodesource.com/setup_18.x | bash - && \
-    apt-get install -y nodejs
-
 # Copy app source code
-COPY . .
+RUN git clone https://github.com/solarwind-metaverse/solarwind-web.git
+
+WORKDIR /app/solarwind-web
 
 # Install app dependencies
 RUN npm install
